VC4-Development-0.0.0-172
	* Console logs in different colors
VC4-Development-0.0.0-173
	+ Server can detect if someone is connecting
VC4-Development-0.0.0-174
	+ Read write packages
VC4-Development-0.0.0-175
	+ Added chat box
VC4-Development-0.0.0-176
	* Chat box fixes
VC4-Development-0.0.0-177
	* Chatbox fixes again
VC4-Development-0.0.0-178
	* Chat lines stay for 2 seconds and fade out during the third
VC4-Development-0.0.0-179
	+ Fonts can now render at different alpha values
VC4-Development-0.0.0-180
	* Text in chat lines is now indented by 3 on the x axis
VC4-Development-0.0.0-181
	* Fixed alpha default 0 on all text (caused button text not to render
VC4-Development-0.0.0-182
	+ Added chat box handler
VC4-Development-0.0.0-183
	* Fixed format bug while measuring lines in chatbox
VC4-Development-0.0.0-184
	* Improved Yaml
VC4-Development-0.0.0-185
	+ Added YamlMap class for easy working with maps
VC4-Development-0.0.0-186
	+ added test FileOutputHandler
VC4-Development-0.0.0-187
	* Fixed a bug with the FileOutputHandler
VC4-Development-0.0.0-188
	+ PluginLoader can now load plugins
	+ Plugins can now do things on enable and disable
VC4-Development-0.0.0-189
	* Fixed bugs with the plugin loader
VC4-Development-0.0.0-190
	+ BlockRenderDefault now renders blocks
	+ Testing chunk rendering
VC4-Development-0.0.0-191
	+ Added GameStates
VC4-Development-0.0.0-192
	+ Added IBlockMultitexture and BlockMultitexture
VC4-Development-0.0.0-193
	+ Added WorldGenerator interface for world generators
VC4-Development-0.0.0-200
	* Improved BlockRendererDefault
	+ Added crosshairs
VC4-Development-0.0.0-201
	+ Added ingame gui
VC4-Development-0.0.0-202
	+ Block now has method to get creative items
VC4-Development-0.0.0-203
	+ Test infinite world
VC4-Development-0.0.0-205
	* Fixed issues with lwjgl natives
VC4-Development-0.0.0-206
	+ Added interface for half blocks
VC4-Development-0.0.0-207
	+ Added stairs renderer
VC4-Development-0.0.0-208
	* Fixed block renderer bugs