@@ -1,0 +1,8 @@
+package vc4.api.entity;
+
+import vc4.api.item.ItemStack;
+
+public interface IEntityPickUpItems {
+
+	public ItemStack pickUpItem(ItemStack in);
+}
